Failed to fix spacing issue when hovering over song number

--- a/app/stylesheets/_album.scss
+++ b/app/stylesheets/_album.scss
@@ -46,8 +46,8 @@
   color: #d2287b;
   border-radius: 50% 50%;
   display: inline-block;
-  width: 28px;
-  height: 28px;
+  width: 25px;
+  height: 25px;
 
   &:hover {
     cursor: pointer;
@@ -56,7 +56,7 @@
   }
 
   i {
-    line-height: 28px;
+    line-height: 25px;
   }
 
   .fa-play {
